<resources>
    <!-- Strings related to App Name -->
    <string name="app_name">SIM</string>
    <!-- Strings related to Site Names / Button Names -->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_Listen">Meine Listen</string>
    <string name="title_produkte">Meine Produkte</string>
    <string name="title_Login">Einloggen</string>
    <string name="title_new_list">Neue Liste</string>
    <string name="title_new_product">Neues Produkt</string>
    <string name="action_profile">Profil</string>
    <string name="action_settings">Settings</string>
    <string name="action_stay_logged_in">Eingeloggt bleiben</string>
    <string name="action_create_product">Produkt erstellen</string>
    <string name="action_create_list">Liste erstellen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to Registration and Login-->
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_register">Registrieren</string>
    <string name="registration">Registrieren</string>
    <string name="prompt_password_confirm">Passwort bestätigen</string>
    <string name="action_sign_in">Einloggen</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Passwort</string>
    <string name="questionRegister">Noch nicht Registriert?</string>
    <string name="sirname">Vorname</string>
    <string name="lastname">Nachname</string>
    <!--Strings related to add Product and add List-->
    <string name="prompt_brand">Marke</string>
    <string name="prompt_product_designation">Produktbezeichnung</string>
    <string name="prompt_expire_date">Ablaufdatum</string>
    <string name="prompt_number_of_pieces">Menge</string>
    <string name="prompt_list_name">Listenname</string>
    <string name="prompt_creation_date">Erstelldatum</string>
    <string name="prompt_storage_location">Lagerort</string>
</resources>