<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/registerTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="69dp"
            android:text="@string/registration"
            android:textAlignment="textStart"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/emailRegister"
            android:layout_width="317dp"
            android:layout_height="49dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editLastname" />

        <EditText
            android:id="@+id/editFirstname"
            android:layout_width="317dp"
            android:layout_height="49dp"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/sirname"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerTV" />

        <EditText
            android:id="@+id/editLastname"
            android:layout_width="317dp"
            android:layout_height="49dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/lastname"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editFirstname" />

        <EditText
            android:id="@+id/pwConfRegister"
            android:layout_width="317dp"
            android:layout_height="49dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/prompt_password_confirm"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pwRegister" />

        <EditText
            android:id="@+id/pwRegister"
            android:layout_width="317dp"
            android:layout_height="49dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailRegister" />

        <Button
            android:id="@+id/register"
            android:layout_width="175dp"
            android:layout_height="48dp"
            android:text="@string/registration"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pwConfRegister" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>