<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editListName"
            android:layout_width="317dp"
            android:layout_height="49dp"
            android:layout_marginTop="110dp"
            android:ems="10"
            android:hint="@string/prompt_list_name"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editCreationDate"
            android:layout_width="219dp"
            android:layout_height="49dp"
            android:layout_marginTop="40dp"
            android:editable="false"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/prompt_creation_date"
            android:inputType="date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.244"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editListName" />

        <EditText
            android:id="@+id/editStorageLocation"
            android:layout_width="317dp"
            android:layout_height="49dp"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/prompt_storage_location"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editCreationDate" />

        <Button
            android:id="@+id/dateButton"
            android:layout_width="99dp"
            android:layout_height="57dp"
            android:text="Datum"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/editCreationDate"
            app:layout_constraintStart_toEndOf="@+id/editCreationDate"
            app:layout_constraintTop_toTopOf="@+id/editCreationDate"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/btnCreateList"
            android:layout_width="317dp"
            android:layout_height="71dp"
            android:layout_marginBottom="100dp"
            android:text="@string/action_create_list"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editStorageLocation" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>